feat(AS-348): :sparkles: Add template details components

--- a/src/settings.json
+++ b/src/settings.json
@@ -486,144 +486,6 @@
     "subTitle": "Begin with a template",
     "description": "Use a template to kick start your application. Pick from just a framework or a full web3 starter kit, the possibilities are limitless.",
     "ctaLabel": "Learn more",
-    "ctaTargetUrl": "/docs/platform/frameworks/#using-framework-templates-to-get-started/",
-    "data": [
-      {
-        "title": "Astro Boilerplate",
-        "slug": "astro-boilerplate",
-        "description": "Start your next project with this Astro boilerplate, designed for seamless development.",
-        "href": "/templates/clx3f5nem000333n7acqcxiwj/",
-        "poster_image_src": "/images/templates/astro-boilerplate.webp",
-        "icon_image_src": "/svg/templates/astro-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/fleek.webp",
-        "added_by": "Fleek"
-      },
-      {
-        "title": "Blogmaker by Vitalik",
-        "slug": "blogmaker-by-vitalik",
-        "description": "Simple and minimal blog template by Vitalik Buterin",
-        "href": "/templates/clyqjmjng0001q94by3huy892/",
-        "poster_image_src": "/images/templates/blogmaker-by-vitalik.webp",
-        "icon_image_src": "/svg/templates/cog-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/fleek.webp",
-        "added_by": "Fleek"
-      },
-      {
-        "title": "Chess on Fleek",
-        "slug": "chess-on-fleek",
-        "description": "Chess on Fleek is perfect for developers looking to deploy real-time, interactive applications. This template utilizes Next.js for a fullstck development experience, rendering, ensuring optimal performance with each move.",
-        "poster_image_src": "/images/templates/chess-on-fleek.webp",
-        "icon_image_src": "/svg/templates/nextjs-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/kanishk_khurana.webp",
-        "added_by": "Kanishk Khurana"
-      },
-      {
-        "slug": "fullstack-nextjs-template",
-        "title": "Fullstack Nextjs Template",
-        "description": "This is the boilerplate code generated directly from running npx create-next-app. Utilize this template to harness Fleek’s optimized hosting for dynamic and performance-driven web applications.",
-        "poster_image_src": "/images/templates/fullstack-nextjs-template.webp",
-        "icon_image_src": "/svg/templates/nextjs-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/kanishk_khurana.webp",
-        "added_by": "Kanishk Khurana"
-      },
-      {
-        "slug": "fullstack-nextra-on-nextjs",
-        "title": "Fullstack Nextra on Nextjs",
-        "description": "This is a Next.js application generated with Create Nextra. Nextra is a minimalist, fully customizable documentation site built for easy deployment on Fleek. Perfect for showcasing project documentation, this template uses Next.js to deliver a smooth experience.",
-        "poster_image_src": "/images/templates/fullstack-nextra-on-nextjs.webp",
-        "icon_image_src": "/svg/templates/nextjs-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/kanishk_khurana.webp",
-        "added_by": "Kanishk Khurana"
-      },
-      {
-        "slug": "fumadocs-on-fleek",
-        "title": "Fumadocs on Fleek",
-        "description": "This is a Next.js application generated with Create Fumadocs. Fumadocs is a minimalist, fully customizable documentation site built for easy deployment on Fleek. Perfect for showcasing project documentation, this template uses Next.js to deliver a smooth, server-rendered experience.",
-        "poster_image_src": "/images/templates/fumadocs-on-fleek.webp",
-        "icon_image_src": "/svg/templates/nextjs-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/kanishk_khurana.webp",
-        "added_by": "Kanishk Khurana"
-      },
-      {
-        "title": "Gatsby Boilerplate",
-        "slug": "gatsby-boilerplate",
-        "description": "Kick off your Gatsby projects with this boilerplate, equipped to handle your development needs.",
-        "href": "/templates/clx3g0ol70001oewqgw7k7knx/",
-        "poster_image_src": "/images/templates/gatsby-boilerplate.webp",
-        "icon_image_src": "/svg/templates/gatsby-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/fleek.webp",
-        "added_by": "Fleek"
-      },
-      {
-        "title": "Hugo Boilerplate",
-        "slug": "hugo-boilerplate",
-        "description": "This Hugo boilerplate provides a solid foundation for static sites, simplified for a fast turnaround on project setup.",
-        "href": "/templates/clx3g1cgx0008oewqi0e1cb1x/",
-        "poster_image_src": "/images/templates/hugo-boilerplate.webp",
-        "icon_image_src": "/svg/templates/hugo-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/fleek.webp",
-        "added_by": "Fleek"
-      },
-      {
-        "title": "Next.js Boilerplate",
-        "slug": "nextjs-boilerplate",
-        "description": "Begin your Next.js project with confidence using this boilerplate, tailored for efficient development.",
-        "href": "/templates/clx3fnwmh0006qy2i55l3vc2c/",
-        "poster_image_src": "/images/templates/nextjs-boilerplate.webp",
-        "icon_image_src": "/svg/templates/nextjs-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/fleek.webp",
-        "added_by": "Fleek"
-      },
-      {
-        "title": "Nuxt Boilerplate",
-        "slug": "nuxt-boilerplate",
-        "description": "Accelerate your Nuxt development with this boilerplate, designed to integrate smoothly into your project workflow.",
-        "href": "/templates/clx3hq2e20001vm7ee9wd81o4/",
-        "poster_image_src": "/images/templates/nuxt-boilerplate.webp",
-        "icon_image_src": "/svg/templates/nuxt-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/fleek.webp",
-        "added_by": "Fleek"
-      },
-      {
-        "title": "React Boilerplate",
-        "slug": "react-boilerplate",
-        "description": "Initialize your React applications quickly using this ready-to-use boilerplate, optimized for fast setup.",
-        "href": "/templates/clx3g4dwk0008qy2i5d6aobe4/",
-        "poster_image_src": "/images/templates/react-boilerplate.webp",
-        "icon_image_src": "/svg/templates/cra-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/fleek.webp",
-        "added_by": "Fleek"
-      },
-      {
-        "title": "Remix Boilerplate",
-        "slug": "remix-boilerplate",
-        "description": "Utilize this Remix boilerplate to structure your projects for an optimal build experience.",
-        "href": "/templates/clx3hzhax00078zh3hrrwnexh/",
-        "poster_image_src": "/images/templates/remix-boilerplate.webp",
-        "icon_image_src": "/svg/templates/vite-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/fleek.webp",
-        "added_by": "Fleek"
-      },
-      {
-        "title": "Svelte Boilerplate",
-        "slug": "svelte-boilerplate",
-        "description": "Adopt this Svelte boilerplate to streamline your app development, enhanced for easy integration.",
-        "href": "/templates/clx3hm85q000ibyl7d17cuufu/",
-        "poster_image_src": "/images/templates/svelte-boilerplate.webp",
-        "icon_image_src": "/svg/templates/svelte-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/fleek.webp",
-        "added_by": "Fleek"
-      },
-      {
-        "title": "Vue Boilerplate",
-        "slug": "vue-boilerplate",
-        "description": "Leverage this Vue.js boilerplate to kickstart your web projects, with pre-configurations for immediate use.",
-        "href": "/templates/clx3gdagl0001byl7romw0ynd/",
-        "poster_image_src": "/images/templates/vue-boilerplate.webp",
-        "icon_image_src": "/svg/templates/vue-icon.svg",
-        "author_profile_image_src": "/images/templates/authors/fleek.webp",
-        "added_by": "Fleek"
-      }
-    ]
+    "ctaTargetUrl": "/docs/platform/frameworks/#using-framework-templates-to-get-started/"
   }
 }
