--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@fleekxyz/sdk": "^0.7.3",
     "@meilisearch/instant-meilisearch": "^0.17.0",
     "@microflash/remark-callout-directives": "^4.1.0",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
@@ -68,9 +69,11 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.0",
     "react-instantsearch": "^7.7.2",
+    "react-markdown": "^9.0.1",
     "react-tooltip": "^5.26.3",
     "rehype-pretty-code": "^0.13.1",
     "remark-directive": "^3.0.0",
+    "remark-gfm": "^4.0.0",
     "swiper": "^11.1.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.3",
@@ -109,5 +112,6 @@
   "engines": {
     "bun": ">=0.5.8",
     "node": ">=18.18.2"
-  }
+  },
+  "packageManager": "pnpm@7.32.4+sha512.82570163e98c1ff15e93e7c220416dd87eae3eac048fe406e0fd598c755cd5a4589dfd63cd42c1dfacd805cb817d0753d7c7f1739d41a159a6f3220a35c08627"
 }
